adds html to book list c

--- a/rest-client/src/app/book-list/book-list.component.html
+++ b/rest-client/src/app/book-list/book-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  book-list works!
-</p>
+<h3>Book Library</h3>
+
+<div *ngIf="books.length > 0">
+  <div *ngFor="let book of books">
+    {{book.isbn}} - {{book.title}} <b>{{book.price}}</b>
+  </div>
+</div>
