adds nav button to add page

--- a/rest-client/src/app/book-list/book-list.component.html
+++ b/rest-client/src/app/book-list/book-list.component.html
@@ -1,4 +1,7 @@
 <h3>Book Library</h3>
+<div>
+  <button [routerLink]="['/add-book']">Add a Book</button>
+</div>
 
 <div *ngIf="books.length > 0">
   <div *ngFor="let book of books">
