fixes routerlink button that i did not have correctly implemented

--- a/rest-client/src/app/book-list/book-list.component.html
+++ b/rest-client/src/app/book-list/book-list.component.html
@@ -7,6 +7,6 @@
   <div *ngFor="let book of books">
     {{book.isbn}} - {{book.title}} <b>{{book.price}}</b>
     <button (click)="deleteBook(book)">DELETE</button>
-    <button [routerLink]="['/edit-book', book.isbn"]>EDIT</button>
+    <button [routerLink]="['/edit-book', book.isbn]">EDIT</button>
   </div>
 </div>
