--- a/rest-client/src/app/book-list/book-list.component.html
+++ b/rest-client/src/app/book-list/book-list.component.html
@@ -1,12 +1,12 @@
 <h3>Book Library</h3>
 <div>
-  <button [routerLink]="['/add-book']">Add a Book</button>
+  <button class="btn-primary" [routerLink]="['/add-book']">Add a Book</button>
 </div>
 
 <div *ngIf="books.length > 0">
   <div *ngFor="let book of books">
     {{book.isbn}} - {{book.title}} <b>{{book.price}}</b>
-    <button (click)="deleteBook(book)">DELETE</button>
+    <button class="btn-danger" (click)="deleteBook(book)">DELETE</button>
     <button [routerLink]="['/edit-book', book.isbn]">EDIT</button>
   </div>
 </div>
