--- a/rest-client/src/app/edit-book/edit-book.component.html
+++ b/rest-client/src/app/edit-book/edit-book.component.html
@@ -2,15 +2,15 @@
 
 <div *ngIf="book != undefined">
   <div>
-    <input type="text" [(ngModel)]="book.isbn" placeholder="ISBN" disabled />
+    <input type="text" class="form-control" [(ngModel)]="book.isbn" placeholder="ISBN" disabled />
   </div>
   <div>
-    <input type="text" [(ngModel)]="book.title" placeholder="Title" />
+    <input type="text" class="form-control" [(ngModel)]="book.title" placeholder="Title" />
   </div>
   <div>
-    <input type="number" [(ngModel)]="book.price" placeholder="Price" />
+    <input type="number" class="form-control" [(ngModel)]="book.price" placeholder="Price" />
   </div>
   <div>
-    <button (click)="updateBook()">Save</button>
+    <button class="primary" (click)="updateBook()">Save</button>
   </div>
 </div>
