--- a/advanced-routing/src/app/app.component.html
+++ b/advanced-routing/src/app/app.component.html
@@ -4,6 +4,10 @@
   <input type=button [routerLink]="['/about']" value="About" routerLinkActive="active" />
   <input type=button [routerLink]="['/admin']" value="Admin" routerLinkActive="active" />
 </div>
+<div class=login>
+  <input class=user type=button (click)="login()" value="{{loginLabel}}" />
+  <span class=user [hidden]="user==='na'">User: {{user}}</span>
+</div>
 <main>
     <router-outlet></router-outlet>
 </main>
