adds products child routes

--- a/advanced-routing/src/app/app.component.html
+++ b/advanced-routing/src/app/app.component.html
@@ -3,6 +3,7 @@
   <input type=button [routerLink]="['/home']" value="Home" routerLinkActive="active" />
   <input type=button [routerLink]="['/about']" value="About" routerLinkActive="active" />
   <input type=button [routerLink]="['/admin']" value="Admin" routerLinkActive="active" />
+  <input type=button [routerLink]="['/products']" value="Products" routerLinkActive="active" />
 </div>
 <div class=login>
   <input class=user type=button (click)="login()" value="{{loginLabel}}" />
