changes bs quotes to apostrophes because quotes are for heathens

--- a/large-app/src/app/app.component.html
+++ b/large-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a href [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>&nbsp;
+<a href [routerLink]="['/']" routerLinkActive='active' [routerLinkActiveOptions]='{exact: true}'>Home</a>&nbsp;
 <a href [routerLink]="['/catalog']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Shop</a>&nbsp;
 <a href [routerLink]="['/account']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">My Account</a>&nbsp;
 <a href [routerLink]="['/account/orders']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">My Orders</a>&nbsp;
