--- a/basic-testing/src/app/greet/greet.component.html
+++ b/basic-testing/src/app/greet/greet.component.html
@@ -1,2 +1,8 @@
 <input type="text" [(ngModel)]="userName" />
 <p>{{getGreeting()}}</p>
+
+
+<input type="number" [(ngModel)]="numberA" /> +
+<input type="number" [(ngModel)]="numberB" />
+<button (click)="add()">Add</button>
+<div>{{addResult}}</div>
